<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timeline"
            android:title="@string/menu_timeline" />
        <item
            android:id="@+id/nav_document_mood"
            android:title="@string/menu_document_mood" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/consent_page"
            android:title="Consent"/>
        <item
            android:id="@+id/nav_notifications"
            android:title="@string/menu_notification"/>
    </group>

    <item android:id="@+id/create_motivation"
        android:title="Enter Motivation" />
</menu>
