<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_timeline">

    <fragment
        android:id="@+id/nav_timeline"
        android:name="com.example.finalanxiety.ui.timeline.TimelineFragment"
        android:label="@string/menu_timeline"
        tools:layout="@layout/fragment_timeline">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_timeline_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_timeline_second"
        android:name="com.example.finalanxiety.ui.timeline.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_timeline" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_document_mood"
        android:name="com.example.finalanxiety.ui.document_mood.DocumentMoodFragment"
        android:label="@string/menu_document_mood"
        tools:layout="@layout/fragment_document_mood" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.finalanxiety.ui.notification.NotificationFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.finalanxiety.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>